--- a/index.html
+++ b/index.html
@@ -1043,8 +1043,6 @@ Error message and password prompt
 
 <li>Ratna Lachman</li>
 
-<li>Reading group</li>
-
 <li>Recent Work</li>
 
 <li>refusal</li>
@@ -1100,6 +1098,8 @@ Error message and password prompt
 <li>slavery</li>
 
 <li>Snuffling</li>
+
+<li>Sometimes Reading Group</li>
 
 <li>space</li>
 
@@ -13635,8 +13635,8 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20230406112755658" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20210925062958213" modified="20230418093541183" title="$:/state/tab/sidebar--595412856">
+<pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
@@ -13719,7 +13719,7 @@ exports.context = contextWidget;
 <div created="20210925130341602" modified="20220223054344263" title="$:/state/toc/TableOfContents-Social Practice--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513071349532" modified="20230403094003195" title="$:/state/toc/TableOfContents-Study--118161433">
+<div created="20220513071349532" modified="20230418094943373" title="$:/state/toc/TableOfContents-Study--118161433">
 <pre>close</pre>
 </div>
 <div created="20220614055652411" modified="20220614055652411" title="$:/state/toc/TableOfContents-study--118161433">
@@ -14037,8 +14037,8 @@ exports.context = contextWidget;
 <div created="20220513091156121" modified="20230112073952776" title="$:/state/toc/TableOfContents/Study-Academic Research--118161433">
 <pre>close</pre>
 </div>
-<div created="20220514072512039" modified="20230403091645384" title="$:/state/toc/TableOfContents/Study-Concepts--118161433">
-<pre>open</pre>
+<div created="20220514072512039" modified="20230418094910859" title="$:/state/toc/TableOfContents/Study-Concepts--118161433">
+<pre>close</pre>
 </div>
 <div created="20220513071410652" modified="20220513071412948" title="$:/state/toc/TableOfContents/Study-Research--118161433">
 <pre>open</pre>
@@ -14139,7 +14139,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Contact Hello [[Current Work]]" title="$:/StoryList">
+<div created="20230418093539591" list="refusal Contact Hello [[Current Work]]" modified="20230418094926233" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -15815,7 +15815,7 @@ Japanese artist Senrei Hata, 1864 - 1929: https://www.philamuseum.org/collection
 <div created="20211108144857331" modified="20220514072504167" tags="Concepts" title="embodiment">
 <pre></pre>
 </div>
-<div created="20220630101836703" modified="20230216122649869" tags="Snuffling" title="Emerging themes">
+<div created="20220630101836703" modified="20230418094938175" tags="Snuffling" title="Emerging themes">
 <pre>''Emerging and current areas of study/research that may or may not ever be presented.''
 
 Note: @@color:blue;blue text@@ are links. Other coloured text don't mean anything except to make this page nicer for me to read.
@@ -15838,7 +15838,7 @@ The work of art and litigation was more to do with performance of law as a live 
 
 !!Cosmologies of Clay
 
-I am starting to combine two different long time interests: @@color:brown;alternative cosmologies and clay@@. Our [[Reading group]] crystallised my interest in alternative '[[cosmologies]]' or knowledge systems as a way to de-programme  colonial, sexist, ableist, neoliberal, classist, anthropocentric ways of thinking and being that comes as first nature to me. In particular, our reading of [[Sylvia Wynter]]'s essay [[Unsettling the Coloniality of Being/Power/Truth/Freedom: Towards the Human, After Man, Its Overrepresentation--An Argument|https://law.unimelb.edu.au/__data/assets/pdf_file/0010/2432989/Wynter-2003-Unsettling-the-Coloniality-of-Being.pdf]] gave me philosophical courage to consider Black, Indigenous and particularly Asian cosmologies as being viable alternative ways of working and living. At the same time I came into the orbit of [[MAIA Group]] and was inspired by their courage to manifest an inclusive and supportive Black worlding of a society that they want to work in.
+I am starting to combine two different long time interests: @@color:brown;alternative cosmologies and clay@@. Our [[Sometimes Reading Group]] crystallised my interest in alternative '[[cosmologies]]' or knowledge systems as a way to de-programme  colonial, sexist, ableist, neoliberal, classist, anthropocentric ways of thinking and being that comes as first nature to me. In particular, our reading of [[Sylvia Wynter]]'s essay [[Unsettling the Coloniality of Being/Power/Truth/Freedom: Towards the Human, After Man, Its Overrepresentation--An Argument|https://law.unimelb.edu.au/__data/assets/pdf_file/0010/2432989/Wynter-2003-Unsettling-the-Coloniality-of-Being.pdf]] gave me philosophical courage to consider Black, Indigenous and particularly Asian cosmologies as being viable alternative ways of working and living. At the same time I came into the orbit of [[MAIA Group]] and was inspired by their courage to manifest an inclusive and supportive Black worlding of a society that they want to work in.
 
 As for clay, it has been the main metaphor and methodology through which I have done all my law and art work so far. But I haven't actually touched clay properly for about 15 years ... since leaving Harrow Ceramics in 2007. The problem with metaphors is that they are literary devices and not material ones. So maybe it is time to get back to @@color:purple;an embodied epistemology@@ in order to understand the social and material world. 
 
@@ -17685,39 +17685,6 @@ Ratna Lachman, born in Singapore, was a civil rights leader based in Yorkshire. 
 
 My tribute to her after her funeral: https://medium.com/@jacktan/a-life-in-artistic-activism-a-tribute-to-my-friend-ratna-lachman-d52c6720d832</pre>
 </div>
-<div created="20211203083922768" modified="20220614055725681" tags="Study" title="Reading group">
-<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/Reading%20group%20-%20sometimesreadinggroup%20insta%20page.jpg]]
-
-!!The Sometimes Reading Group
-
-I run an occasional online reading group on Instagram where we get together for an hour once a week or once a fortnight to read a book or paper.  Our approach is one of ''collective signposting''. This means that no one has to read everything before they come to the meetings or even after. We rely on each other to offer what we have read or are able to read as signposts to further study or reflection. 
-
-Our instagram account is at https://www.instagram.com/sometimesreadinggroup/
-
-Our approach to reading and reading groups is developing with time, but here are some notes we made in the past:
-
-!!Some Thoughts About Reading:
-
-* A one hour discussion is very short. So this meeting is just meant to be a point of contact, energy and being together as we each read on our own together. 
-* This is more of an encouragement group than a discussion group.
-* There is no right or wrong way to understand this book.
-* You don’t have to read everything. 
-* You don’t have to read in a linear way (from A-Z). Try reading back to front, or dipping in and out of different bits.
-* Be aware of the different types of reading you might want to do, e.g.: 
-** skimming quickly for a general impression, 
-** scanning for specific information or key words, 
-** close reading for detailed understanding,
-** contemplative reading for reflecting on how the text informs your practice and/or life.
-* Take note of how your context produces different readings in you and from the text: 
-** the time of day, 
-** how full/hungry/tired/rested your body is, 
-** the season, 
-** the moon, 
-** your mental health,
-** your posture
-** where you are.
-</pre>
-</div>
 <div created="20220630095227071" modified="20230216124655628" tags="[[Current and Selected Work]]" title="Recent Work">
 <pre>Exhibitions, projects or public events that have finished in 2023.
 
@@ -17729,7 +17696,7 @@ Our approach to reading and reading groups is developing with time, but here are
 
 </pre>
 </div>
-<div created="20230403091658048" modified="20230406135418783" tags="Concepts" title="refusal">
+<div created="20230403091658048" modified="20230418100432453" tags="Concepts" title="refusal">
 <pre>!!''Bartleby''
 
 Bartleby the Scrivener is a short story by novellist Herman Melville about a legal clerk who refuses to do any tasks he is asked to. We know he is a capable and valuable individual because at the start of his employment he produces a lot of high quality work. But then he starts refusing to undertake tasks using his notorious phrase &quot;I would prefer not to&quot;, until eventually he does no work at all and yet continues to be present at work every day. His boss and colleagues with confusion, bewilderment, anger trying to reason and persuade him. But to no avail.
@@ -17786,13 +17753,21 @@ Therefore, if we are presented with the cycle/system of oppression and resistanc
 
 https://disorganising.co/jack-ky-tan-s-refusals
 
-In 2021 I was invited by a group of Melbourne-based arts organisations to conduct workshops with their Directors and Boards to figure out how to respond to funding cuts in the Victoria arts sector by imagining a new institutional landscape based on innovative ways of cooperating and developing new non-competitive institutional ethics. This 'disorganising' project was to be about creating radical resilience and institutional mutual aid. However, in the culmination workshop, //almost all// the participants decided not to attend because they were too busy, in particular busy applying for grants from the arts funding body that had caused their crisis in the first place.
+In 2021 I was invited by a group of Melbourne-based arts organisations to conduct 3 workshops with their Directors and Boards to figure out how to respond to funding cuts in Victoria: one with directors, one with trustees and a final combined workshop. We would imagine a new institutional landscape based on innovative ways of cooperating and developing new non-competitive institutional ethics. This 'disorganising' project was exciting because it was about creating radical resilience and institutional mutual aid. 
 
-This made me question the basis for this and other similar projects. Was this just pressure-relief or knee-jerk //reactions// to crisis rather than the de Certeau-an 'tactics' we need to develop as //responses// to the system?  It also made me deeply embarrassed by the 'fan letter' I had prepared for that final meeting: one I wrote because I was so impressed by Melbourne's seemingly courageous institutional response to their neoliberal funding landscape.
+However, in the culmination workshop, //almost all// the participants decided not to attend because they were too busy, in particular busy applying for grants from the arts funding body that had caused their crisis in the first place.
 
-In the end, I refused to cancel the meeting and decided to go ahead with the meeting and read my prepared letter out to an empty room. The 2 project facilitators decided to text all participant to inform them that the workshop was going ahead regardless, following which a number of them turned up. After reading out my letter (of embarrassingly misplaced sentiment), we talked about organisations disrespecting artistic labour, using us to appear to do radical work, sweeping things under the carpet, and complicity propping up the system (or their/our 'bad faith').
+I was not only disappointed but also deeply embarrassed by a 'fan letter' I was planning to read out for that final meeting. I wrote this fan letter because I was so impressed by the premise of this project and the organisations' courageous response to their difficult funding landscape. But this mass absenteeism made me question how able they were to be serious about this project, or whether it was possible at all to resist the politics of instrumentalization in the arts sector.
 
-The letter, and an edited transcript of the project can be found here on the [[Disorganising website|https://disorganising.co/jack-ky-tan-s-refusals]] or [[in this tiddler|Disorganising]].
+In the end, I refused to cancel the meeting and decided to hold open that time and space for them even if they couldn't be there. I would read my prepared letter out to an empty room if need be. The 2 project facilitators then decided to text all participants to inform them that the workshop was going ahead regardless. After reading out my letter of embarrassingly misplaced sentiment, a few participants turned up. We then debated the way organisations disrespect artistic labour, use artists to appear to do radical work, sweep things under the carpet, and are complicit in propping up the system that harmed them in the first place.
+
+The letter, and an edited transcript of this discucssion can be found here on the [[Disorganising website|https://disorganising.co/jack-ky-tan-s-refusals]] or [[in this tiddler|Disorganising]].
+
+&lt;br&gt;
+
+!! ''Hannah Arendt's 'critical thinking as refusal'''
+
+In the [[Sometimes Reading Group]], We are currently reading Hannah Arendt's ''[[Responsibility and Judgment|https://dokumen.pub/responsibility-and-judgment-paperbacknbsped-0805211624-9780805211627.html]]'' in which she discusses Adolf Eichmann's culpability in Nazi war crimes even though everything he did was legal under German law at the time. Arendt proposes that Eichmann (and by implication anyone in the German civil service at the time) had suspended their critical thinking. Critical thinking would have made them realise that what they were doing, or what they were a part of, was monstrous. For Arendt, critical thinking would and should have led civil servants to refuse to do their jobs or even to quit. This refusal was also part of what she understands to be collective responsibility.
 
 &lt;br&gt;
 
@@ -18386,12 +18361,12 @@ Should the Respondent win, the Claimant agrees that he and three other band memb
 
 Verdict:  Olivia won</pre>
 </div>
-<div created="20210925104118267" modified="20220612150808954" tags="" title="Site updates">
+<div created="20210925104118267" modified="20230418094938176" tags="" title="Site updates">
 <pre>`This site is new and still under construction. Check back now and again to see how it grows.`
 
 ''New things added'':
 
-3 Dec 2021 - [[Island Life press release]], [[Reading group]], [[Current and Selected Work]], [[Selected Work]]
+3 Dec 2021 - [[Island Life press release]], [[Sometimes Reading Group]], [[Current and Selected Work]], [[Selected Work]]
 &lt;br&gt;9 Nov 2021 - [[Roundtable on Trustee's duties]] - resource for Lux Trustees
 &lt;br&gt; 8 Nov 2021 - updated [[About]]
 &lt;br&gt;29 Oct 2021 - [[Bartlett Design and Creative Practice]] - resource for Bartlett students
@@ -18427,6 +18402,39 @@ Verdict:  Olivia won</pre>
 I am suffling for new truffles and precious nuggets in my practice.
 
 I was born in the [[Year of the Pig]].</pre>
+</div>
+<div created="20211203083922768" modified="20230418094938174" tags="Study" title="Sometimes Reading Group">
+<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/Reading%20group%20-%20sometimesreadinggroup%20insta%20page.jpg]]
+
+!!The Sometimes Reading Group
+
+I run an occasional online reading group on Instagram where we get together for an hour once a week or once a fortnight to read a book or paper.  Our approach is one of ''collective signposting''. This means that no one has to read everything before they come to the meetings or even after. We rely on each other to offer what we have read or are able to read as signposts to further study or reflection. 
+
+Our instagram account is at https://www.instagram.com/sometimesreadinggroup/
+
+Our approach to reading and reading groups is developing with time, but here are some notes we made in the past:
+
+!!Some Thoughts About Reading:
+
+* A one hour discussion is very short. So this meeting is just meant to be a point of contact, energy and being together as we each read on our own together. 
+* This is more of an encouragement group than a discussion group.
+* There is no right or wrong way to understand this book.
+* You don’t have to read everything. 
+* You don’t have to read in a linear way (from A-Z). Try reading back to front, or dipping in and out of different bits.
+* Be aware of the different types of reading you might want to do, e.g.: 
+** skimming quickly for a general impression, 
+** scanning for specific information or key words, 
+** close reading for detailed understanding,
+** contemplative reading for reflecting on how the text informs your practice and/or life.
+* Take note of how your context produces different readings in you and from the text: 
+** the time of day, 
+** how full/hungry/tired/rested your body is, 
+** the season, 
+** the moon, 
+** your mental health,
+** your posture
+** where you are.
+</pre>
 </div>
 <div created="20211029073540794" modified="20220514072504168" tags="Concepts" title="space">
 <pre></pre>
